# routes/api.php
@@ -12,11 +12,12 @@ Route::prefix('v1')->group(function () {
         Route::post('/password/reset', 'ResetPasswordController@reset');
         Route::post('/email/resend', 'VerificationController@resend')->name('verification.resend');
         Route::post('/email/verify', 'VerificationController@verify')->name('verification.verify');
-
-        Route::post('/email/resend-verify-Otp-with-link', 'VerificationController@resendverifyotpwithlink')->name('verification.verifywithlink');
-        Route::post('/document/verify', 'DocumentVerificationController@store')->name('verification.document');
-        Route::post('/document/resend/otp', 'DocumentResendOtpController@store')->name('verification.resend.otp');
-        Route::post('/ScheduleSession/verify', 'SessionScheduleVerificationController@store')->name('verification.session');
-        Route::post('/session/resend/otp', 'SessionScheduleResendOtpController@store')->name('session.verification.resend.otp');
     });
+
+
+    Route::resource('/solana-wallet', 'Api\Solana\SolanaKeyController');
+
+    // Route::group(['prefix' => 'user', 'namespace' => 'Api\Solana'], function () {
+    //     Route::get('/wallet', 'SolanaKeyController@index');
+    // });
 });
