# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "http://skoutwatch.test",
+            "url": "http://skoutwatchapi.test",
             "description": "Local API server"
         },
         {
@@ -27,6 +27,60 @@
         }
     ],
     "paths": {
+        "/api/v1/attribute-category": {
+            "get": {
+                "tags": [
+                    "Attributes"
+                ],
+                "summary": "Attributes category of a user",
+                "description": "Attributes category of a user",
+                "operationId": "attribute category",
+                "responses": {
+                    "200": {
+                        "description": "Successful signin",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/v1/attributes": {
+            "get": {
+                "tags": [
+                    "Attributes"
+                ],
+                "summary": "Attributes of a user",
+                "description": "Attributes of a user",
+                "operationId": "attributes",
+                "responses": {
+                    "200": {
+                        "description": "Successful signin",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/v1/user/change/password": {
             "post": {
                 "tags": [
@@ -731,6 +785,33 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/v1/solana-wallet": {
+            "get": {
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "Profile of a wallet user",
+                "description": "Profile of a wallet user",
+                "operationId": "wallet",
+                "responses": {
+                    "200": {
+                        "description": "Successful signin",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         }
     },
